test/Fail/CubicalPrimitiveNotFullyApplied.agda
module CubicalPrimitiveNotFullyApplied where

open import Agda.Primitive.Cubical

test : Set
test = primPOr
