test/Fail/CubicalPrimitiveNotFullyApplied.err
CubicalPrimitiveNotFullyApplied.agda:6.8-15: error: [CubicalPrimitiveNotFullyApplied]
primPOr must be fully applied
when checking that the expression primPOr has type Set
